objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>JohnSmith__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prospect_Rating__c</fullName>
        <description>Indicates how closely a candidate fits the position applied to.</description>
        <inlineHelpText>How well does the candidate fit the job description?</inlineHelpText>
        <label>Prospect Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cool</fullName>
                </value>
                <value>
                    <fullName>Manager Favourite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TESTFIELD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TESTFIELD</label>
        <type>Checkbox</type>
    </fields>
    <customHelpPage>Job_Candidate_Help</customHelpPage>
    <description>People who have applied to a particular position at the company.</description>
    <label>Candidate</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>